[package]
name = "git-stk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.11"
git2 = "0.20.2"
octocrab = "0.47.1"
open = "5.3.1"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
async-trait = "0.1"
wiremock = "0.6"
tempfile = "3.8"
predicates = "3.0"
tokio-test = "0.4"
rand = "0.8"
regex = "1.10"
dotenvy = "0.15"
base64 = "0.22.1"
